--- a/src/styles.css
+++ b/src/styles.css
@@ -121,10 +121,13 @@ ul {
   font-size: 16px;
 }
 
-#celsius {
-  color: #000;
+.source-code {
+  text-align: left;
+  color: #fff;
+  font-size: 15px;
+  padding: 0 10px;
 }
 
-#fahrenheit {
-  color: #000;
+.source-code-link {
+  color: #fff;
 }
