--- a/src/styles.css
+++ b/src/styles.css
@@ -69,9 +69,10 @@ ul {
 }
 
 .city-name {
-  font-size: 75px;
+  font-size: 80px;
   font-weight: bolder;
   line-height: 1;
+  padding-top: 30px;
 }
 
 .date {
@@ -112,7 +113,6 @@ ul {
 .daily-weather-forecast {
   margin: 0 auto;
   height: 60%;
-
   background: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
   border: 2px solid #273342;
   border-radius: 4px;
