--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 body {
   background-attachment: fixed;
   background-size: cover;
-  color: 273342;
+  color: #273342;
   font-family: "Playfair Display";
   font-weight: bolder;
   text-align: center;
